packages/docs/content/4.0/components/tooltip.mdx
---
title: React Tooltip Component
name: Tooltip
description: Documentation and examples for adding React Tooltips.

menu: Components
route: /components/tooltip
---

import { CTooltip, CButton, CLink } from './../../../../coreui-react/src/index.ts'

## Examples

Hover over the links below to see tooltips:

<Example>
  <p className="text-medium-emphasis">
    Tight pants next level keffiyeh
    <CTooltip content="Tooltip text">
      <CLink> you probably </CLink>
    </CTooltip>
    haven't heard of them. Photo booth beard raw denim letterpress vegan messenger bag stumptown.
    Farm-to-table seitan, mcsweeney's fixie sustainable quinoa 8-bit american apparel
    <CTooltip content="Tooltip text">
      <CLink> have a </CLink>
    </CTooltip>
    terry richardson vinyl chambray. Beard stumptown, cardigans banh mi lomo thundercats. Tofu
    biodiesel williamsburg marfa, four loko mcsweeney''s cleanse vegan chambray. A really ironic
    artisan
    <CTooltip content="Tooltip text">
      <CLink> whatever keytar </CLink>
    </CTooltip>
    scenester farm-to-table banksy Austin
    <CTooltip content="Tooltip text">
      <CLink> twitter handle </CLink>
    </CTooltip>
    freegan cred raw denim single-origin coffee viral.
  </p>
</Example>

```jsx
<p className="text-medium-emphasis">
  Tight pants next level keffiyeh
  <CTooltip content="Tooltip text">
    <CLink> you probably </CLink>
  </CTooltip>
  haven't heard of them. Photo booth beard raw denim letterpress vegan messenger bag stumptown.
  Farm-to-table seitan, mcsweeney's fixie sustainable quinoa 8-bit american apparel
  <CTooltip content="Tooltip text">
    <CLink> have a </CLink>
  </CTooltip>
  terry richardson vinyl chambray. Beard stumptown, cardigans banh mi lomo thundercats. Tofu
  biodiesel williamsburg marfa, four loko mcsweeney''s cleanse vegan chambray. A really ironic
  artisan
  <CTooltip content="Tooltip text">
    <CLink> whatever keytar </CLink>
  </CTooltip>
  scenester farm-to-table banksy Austin
  <CTooltip content="Tooltip text">
    <CLink> twitter handle </CLink>
  </CTooltip>
  freegan cred raw denim single-origin coffee viral.
</p>
```

Hover over the buttons below to see the four tooltips directions: top, right, bottom, and left. Directions are mirrored when using CoreUI in RTL.

<Example>
  <CTooltip content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." placement="top">
    <CButton color="secondary">Tooltip on top</CButton>
  </CTooltip>
  <CTooltip content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." placement="right">
    <CButton color="secondary">Tooltip on right</CButton>
  </CTooltip>
  <CTooltip content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." placement="bottom">
    <CButton color="secondary">Tooltip on bottom</CButton>
  </CTooltip>
  <CTooltip content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." placement="left">
    <CButton color="secondary">Tooltip on left</CButton>
  </CTooltip>
</Example>

```jsx
  <CTooltip
    content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
    placement="top"
  >
    <CButton color="secondary">Tooltip on top</CButton>
  </CTooltip>
  <CTooltip
    content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
    placement="right"
  >
    <CButton color="secondary">Tooltip on right</CButton>
  </CTooltip>
  <CTooltip
    content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
    placement="bottom"
  >
    <CButton color="secondary">Tooltip on bottom</CButton>
  </CTooltip>
  <CTooltip
    content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
    placement="left"
  >
    <CButton color="secondary">Tooltip on left</CButton>
  </CTooltip>
```

## API

### CTooltip

`markdown:CTooltip.api.mdx`
