packages/docs/content/4.4/components/tooltip.mdx
---
title: React Tooltip Component
name: Tooltip
description: Documentation and examples for adding React Tooltips.
menu: Components
route: /components/tooltip
other_frameworks: tooltip
---

import { CTooltip, CButton, CLink } from '@coreui/react/src/index'

## Examples

Hover over the links below to see tooltips:

<Example>
  <p className="text-medium-emphasis">
    Tight pants next level keffiyeh
    <CTooltip content="Tooltip text">
      <CLink> you probably </CLink>
    </CTooltip>
    haven't heard of them. Photo booth beard raw denim letterpress vegan messenger bag stumptown.
    Farm-to-table seitan, mcsweeney's fixie sustainable quinoa 8-bit american apparel
    <CTooltip content="Tooltip text">
      <CLink> have a </CLink>
    </CTooltip>
    terry richardson vinyl chambray. Beard stumptown, cardigans banh mi lomo thundercats. Tofu
    biodiesel williamsburg marfa, four loko mcsweeney''s cleanse vegan chambray. A really ironic
    artisan
    <CTooltip content="Tooltip text">
      <CLink> whatever keytar </CLink>
    </CTooltip>
    scenester farm-to-table banksy Austin
    <CTooltip content="Tooltip text">
      <CLink> twitter handle </CLink>
    </CTooltip>
    freegan cred raw denim single-origin coffee viral.
  </p>
</Example>

```jsx
<p className="text-medium-emphasis">
  Tight pants next level keffiyeh
  <CTooltip content="Tooltip text">
    <CLink> you probably </CLink>
  </CTooltip>
  haven't heard of them. Photo booth beard raw denim letterpress vegan messenger bag stumptown.
  Farm-to-table seitan, mcsweeney's fixie sustainable quinoa 8-bit american apparel
  <CTooltip content="Tooltip text">
    <CLink> have a </CLink>
  </CTooltip>
  terry richardson vinyl chambray. Beard stumptown, cardigans banh mi lomo thundercats. Tofu
  biodiesel williamsburg marfa, four loko mcsweeney''s cleanse vegan chambray. A really ironic
  artisan
  <CTooltip content="Tooltip text">
    <CLink> whatever keytar </CLink>
  </CTooltip>
  scenester farm-to-table banksy Austin
  <CTooltip content="Tooltip text">
    <CLink> twitter handle </CLink>
  </CTooltip>
  freegan cred raw denim single-origin coffee viral.
</p>
```

Hover over the buttons below to see the four tooltips directions: top, right, bottom, and left. Directions are mirrored when using CoreUI in RTL.

<Example>
  <CTooltip content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." placement="top">
    <CButton color="secondary">Tooltip on top</CButton>
  </CTooltip>
  <CTooltip content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." placement="right">
    <CButton color="secondary">Tooltip on right</CButton>
  </CTooltip>
  <CTooltip content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." placement="bottom">
    <CButton color="secondary">Tooltip on bottom</CButton>
  </CTooltip>
  <CTooltip content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus." placement="left">
    <CButton color="secondary">Tooltip on left</CButton>
  </CTooltip>
</Example>

```jsx
  <CTooltip
    content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
    placement="top"
  >
    <CButton color="secondary">Tooltip on top</CButton>
  </CTooltip>
  <CTooltip
    content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
    placement="right"
  >
    <CButton color="secondary">Tooltip on right</CButton>
  </CTooltip>
  <CTooltip
    content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
    placement="bottom"
  >
    <CButton color="secondary">Tooltip on bottom</CButton>
  </CTooltip>
  <CTooltip
    content="Vivamus sagittis lacus vel augue laoreet rutrum faucibus."
    placement="left"
  >
    <CButton color="secondary">Tooltip on left</CButton>
  </CTooltip>
```

## Customizing

### CSS variables

React toltips use local CSS variables on `.tooltip` for enhanced real-time customization. Values for the CSS variables are set via Sass, so Sass customization is still supported, too.

```sass
--cui-tooltip-zindex: #{$zindex-tooltip};
--cui-tooltip-max-width: #{$tooltip-max-width};
--cui-tooltip-padding-x: #{$tooltip-padding-x};
--cui-tooltip-padding-y: #{$tooltip-padding-y};
--cui-tooltip-margin: #{$tooltip-margin};
--cui-tooltip-font-size: #{$tooltip-font-size};
--cui-tooltip-color: #{$tooltip-color};
--cui-tooltip-bg: #{$tooltip-bg};
--cui-tooltip-border-radius: #{$tooltip-border-radius};
--cui-tooltip-opacity: #{$tooltip-opacity};
--cui-tooltip-arrow-width: #{$tooltip-arrow-width};
--cui-tooltip-arrow-height: #{$tooltip-arrow-height};
```

#### How to use CSS variables

```jsx
const vars = { 
  '--my-css-var': 10,
  '--my-another-css-var': "red" 
}
return <CTooltip style={vars}>...</CTooltip>
```

### SASS variables

```sass
$tooltip-font-size:                 $font-size-sm;
$tooltip-max-width:                 200px;
$tooltip-color:                     $high-emphasis-inverse;
$tooltip-bg:                        $black;
$tooltip-border-radius:             $border-radius;
$tooltip-opacity:                   .9;
$tooltip-padding-y:                 $spacer * .25;
$tooltip-padding-x:                 $spacer * .5;
$tooltip-margin:                    null;

$tooltip-arrow-width:               .8rem;
$tooltip-arrow-height:              .4rem;
$tooltip-arrow-color:               null; 
```

## API

### CTooltip

`markdown:CTooltip.api.mdx`
